--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ Gaussian_tests
 grand_finale/CLIP_VIRTUAL_LODA/DATASET
 grand_finale/mmcv
 grand_finale/ViTPose
-images
-images_ocu
-images_ocu1
+images_ir
+images-sudhin
 images-1
 Ocular/waypt2_15_48.927230464786334_8.109561293040809_-32.223052978515625_10
